[gd_scene load_steps=21 format=2]

[ext_resource path="res://Juego/EstaciondeRecarga/AreaAtracciona.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/BaseEnemiga4.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/BaseEnemiga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/BaseEnemiga3.png" type="Texture" id=4]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/BaseEnemiga1.png" type="Texture" id=5]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/BaseEnemiga2.png" type="Texture" id=6]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/AreaColision.gd" type="Script" id=7]
[ext_resource path="res://Juego/SFX/impacto_BaseEnemiga.wav" type="AudioStream" id=8]
[ext_resource path="res://Juego/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=9]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/PosicionesSpawn.gd" type="Script" id=10]
[ext_resource path="res://Juego/Estaciones/EstacionEnemiga/RutaEnemigo.gd" type="Script" id=11]

[sub_resource type="CapsuleShape2D" id=4]
radius = 50.0
height = 450.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 23.0
height = 84.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 22.0
height = 36.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RotacionParcial"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 602.147, 46.7027, 35.9596, -98.8882, -35.9596, 98.8882, 670.999, 214.002, 155.824, -35.959, -155.824, 35.959, 403.999, 346.001, 110.875, -77.9117, -110.875, 77.9117, 406.999, 571.001, 98.8884, -71.9185, -98.8884, 71.9185, 172.999, 592, 149.831, -2.99623, -149.831, 2.99623, -70.5507, 832.672, 98.8882, 2.99686, -98.8882, -2.99686, -240.002, 594.999, 41.9525, 29.9662, -41.9525, -29.9662, -420.001, 537.999, 65.9254, 26.9697, -65.9254, -26.9697, -462.001, 360.999, 23.9726, 119.865, -23.9726, -119.865, -648.001, 228.998, 11.9862, 104.882, -11.9862, -104.882, -561, 36.9986, 104.881, 122.861, -104.881, -122.861, -669, -164.002, -236.732, -0.000601814, 236.732, 0.000601814, -524.999, -331.001, -110.875, 86.9015, 110.875, -86.9015, -455.999, -541.001, -65.9256, 50.9423, 65.9256, -50.9423, -233.999, -547.001, -128.854, -2.99694, 128.854, 2.99694, -0.99818, -718, -83.9052, -8.99005, 83.9052, 8.99005, 191.001, -523, -71.9186, -62.9291, 71.9186, 62.9291, 590.002, -669.998, -83.9049, -95.8919, 83.9049, 95.8919, 416.001, -291.999, -41.9523, -122.861, 41.9523, 122.861, 671.001, -234.998, -178.653, -122.08, 178.653, 122.08, 590.223, 37.7599 )
}

[node name="BaseEnemiga" type="Node2D"]
rotation = 3.14159
z_index = 10
z_as_relative = false
script = ExtResource( 3 )
hitpoints = 1.0
orbital = ExtResource( 9 )
numero_orbitales = 5

[node name="Sprites" type="Node2D" parent="."]
rotation = -6.28319

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 146, -70 )
rotation = 3.14159
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( -3, 28 )
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 1, -237 )
scale = Vector2( 0.806452, 1 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 0.999997, -190 )
scale = Vector2( 0.809524, 1 )
texture = ExtResource( 2 )

[node name="AreaColision" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 64
collision_mask = 11
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 1, -1 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 127, -64 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -102, -67 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
position = Vector2( 3.00002, -5.99999 )
scale = Vector2( 0.760001, 0.760001 )
collision_layer = 64
collision_mask = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/RotacionParcial = SubResource( 8 )
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="PosicionesSpawns" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Norte" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( 0, 500 )

[node name="Sur" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( 0, -500 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( 500, 0 )

[node name="Este" type="Position2D" parent="PosicionesSpawns"]
position = Vector2( -500, 0 )

[node name="RutaEnemigo" type="Path2D" parent="."]
position = Vector2( -0.999853, -58 )
scale = Vector2( 0.8, 0.8 )
curve = SubResource( 9 )
script = ExtResource( 11 )

[node name="TimerSpawnerEnemigo" type="Timer" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnerEnemigo" to="." method="_on_TimerSpawnerEnemigo_timeout"]
